--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,7 +5,7 @@
 <ul>
     {{#each burger}}
     {{#unless devoured}}
-    {{> cats/cat-block devoured=false}}
+    {{> burger/burger-block devoured=false}}
     {{/unless}}
     {{/each}}
 </ul>
@@ -14,8 +14,8 @@
 
 <ul>
     {{#each burger}}
-    {{#if sleepy}}
-    {{> cats/cat-block devoured=true}}
+    {{#if devoured}}
+    {{> burger/burger-block devoured=true}}
     {{/if}}
     {{/each}}
 </ul>
@@ -24,14 +24,14 @@
 <form class="create-form">
 
     <div class="form-group">
-        <label for="ca">Burger Name:</label>
+        <label for="bu">Burger Name:</label>
         <input type="text"
-            id="ca"
-            name="name">
+            id="bu"
+            name="burger_name">
     </div>
 
     <div class="form-group">
-        <label for="slee">Burger</label><br>
+        <label for="dev">Burger</label><br>
     </div>
 
     <button type="submit">Add Burger</button>
