add burger logic works

--- a/views/partials/burger/burger-block.handlebars
+++ b/views/partials/burger/burger-block.handlebars
@@ -1,9 +1,9 @@
-<li>
+<ul>
     {{burger_name}}
 
     <button class="change-devoured"
         data-id="{{id}}"
         data-newDevoured="{{DEVOURED}}">
-        {{#if devoured}}DEVOURED{{else}}ORDER DONE{{/if}}
+        {{#if devoured}}DEVOURED{{else}}DONE{{/if}}
     </button>
-</li>
+</ul>
