--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,17 +5,17 @@
 <ul>
     {{#each burger}}
     {{#unless devoured}}
-    {{> burger/burger-block devoured=false}}
+    {{> burger/burger-block devoured=true}}
     {{/unless}}
     {{/each}}
 </ul>
 
-<h2>Completed Orders</h2>
+<h2>Devoured Burgers</h2>
 
 <ul>
     {{#each burger}}
     {{#if devoured}}
-    {{> burger/burger-block devoured=true}}
+    {{> burger/burger-block devoured=false}}
     {{/if}}
     {{/each}}
 </ul>
@@ -27,12 +27,8 @@
         <label for="bu">Burger Name:</label>
         <input type="text"
             id="bu"
-            name="burger_name">
+            name="name">
     </div>
 
-    <div class="form-group">
-        <label for="dev">Burger</label><br>
-    </div>
-
-    <button type="submit">Add Burger</button>
+    <button type="submit">Name Your Burger</button>
 </form>
