--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,7 +8,7 @@
         type="text/css" />
     <title>Build-A-Burger</title>
     <script src="https://code.jquery.com/jquery.js"></script>
-    <script src="/assets/js/burger.js"></script>
+    <script src="/assets/js/burgers.js"></script>
 </head>
 
 <body>
