--- a/views/partials/burger/burger-block.handlebars
+++ b/views/partials/burger/burger-block.handlebars
@@ -1,9 +1,9 @@
 <li class="list-group-item">
     {{burger_name}}
 
-    <button class="change-devoured btn btn-secondary"
+    <button class="change-devoured"
         data-id="{{id}}"
-        data-newDevoured="{{DEVOURED}}">
+        data-newdevoured="{{devoured}}">
         {{#if devoured}}Devour It!{{else}}Yum!{{/if}}
     </button>
 
