added burger image and more styles

--- a/views/partials/burger/burger-block.handlebars
+++ b/views/partials/burger/burger-block.handlebars
@@ -4,7 +4,7 @@
     <button class="change-devoured"
         data-id="{{id}}"
         data-newdevoured="{{devoured}}">
-        {{#if devoured}}Devour It!{{else}}Yum!{{/if}}
+        {{#if devoured}}Devour It!{{else}}Yum, Order Again!{{/if}}
     </button>
 
 </li>
