--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,10 +1,11 @@
-<div class="jumbotron text-center">
-    <h1>Build-A-Burger</h1>
-</div>
+<div class="jumbotron text-center"></div>
+
 
 <div class="container">
+    <h1>Build-A-Burger</h1>
     <div class="row">
         <div class="col-sm-4">
+
             <h2>Add a Burger</h2>
             <form class="create-form">
                 <div class="form-group">
